Fix Alignments-II

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -39,5 +39,5 @@ svg {
     width: 19px;
     height: 20px;
     border-radius: 5px;
-    margin-left: 4vw;
+    margin-left: 7vw;
 }
