--- a/src/components/SubMenu.css
+++ b/src/components/SubMenu.css
@@ -7,7 +7,7 @@
 }
 
 #languages {
-    margin-left: 4.3vw;
+    margin-left: 5vw;
     border-radius: 5px;
 }
 
@@ -15,5 +15,5 @@
     width: 19px;
     height: 20px;
     border-radius: 5px;
-    margin-left: 6.7vw;
+    margin-left: 11.12vw;
 }
